syntax = "proto3";

option csharp_namespace = "Kaytune.Saga.Server";

package SagaEnvet;

// The greeting service definition.
service SagaEnvetService {
  rpc OnConnect (SagaConfig)returns(stream GrpcCompensableArgs);
  rpc SendEvent (GrpcEventMessage) returns(GrpcAck);
  rpc OnDisconnected (SagaEnvet.SagaConfig) returns(GrpcAck);
}

message SagaConfig{
	string serviceName = 1;
	string serviceId= 2;
}

message GrpcAck{
	bool aborted=1;
}

message GrpcEventMessage{
	int64 timestamp = 1;
	string glabolId = 2;
	string localId = 3;
	string type = 4;
	string ImplementMethod = 5;
	bytes payloads = 6;
	string serviceName = 7;
	string ServiceId = 8;
	int32 retries = 9;
	string compensableMethod = 10;
	string typeName=11;
	string exceptionMessage=12;
}

message GrpcCompensableArgs{
	string glabolId=1;
	string localId=2;
	string ImplementMethod=4;
	string compensableMethod=5;
	bytes payloads=6;
	string typeName=7;
}


